
Changelog
=========

1.1.2 (unreleased)
------------------

- Adds the ability to change the email address of a reservation.
  [href]

- Ensure that the session data is never shared between browsers, even if
  the same user is logged in.
  [href]

- Disables unload protection on search form.
  [href]

- Adds the ability to remove parts of a reservation (timespans).
  [href]

1.1.1 (2014-08-06)
------------------

- Fixes a bug where reserving a heterogenous group of reservations would
  sometimes lead to wrongly reserved spots.
  [href]

- The availability of partly available allocations in the search view is
  now limited to the time selected in the search.
  [href]

- Correctly aligns the time in the search view.
  [href]

- The search now defaults to 'available allocations only'.
  [href]

- Reservation dates are now always shown correctly in the manage view.
  [href]

1.1 (2014-08-05)
----------------

- Adds new search & reserve feature. On each resource, users may search
  for allocations. Those allocations may be selected and reserved in compound.

  This is a big new feature and 1.1 is meant to be the canary for it. There
  are certain things which don't yet work: group reservations are kept out
  of the search, the compound reservations don't show up everywhere yet and
  there are rough edges in the UI.

  If you are not absolutely sure you need this release we therefore recommend
  to wait for a week or two. We'll deliver 1.1.+ which will be a more stable
  and more widely adapted release.
  [href]

- Hide the timeframes selection in the allocation and search form, inside
  an icon close to the dates.
  [href]

- Make sure following the documentation under Ubuntu 14.04 works and clarify
  some things. Fixes #159.
  [href]

- Remove resource description from thankyou-page.
  [href]

1.0.24 (2014-07-16)
-------------------

- Adds the ability to define green/orange/red thresholds in the controlpanel.
  Fixes #158.
  [href]
